RESOLVED FIXED180395
Math: don't redundantly check for exceptions, just release scope
https://bugs.webkit.org/show_bug.cgi?id=180395
Summary Math: don't redundantly check for exceptions, just release scope
JF Bastien
Reported 2017-12-04 23:18:00 PST
In #180297 two of the exeptions checks could just have been exception scope releases before the return, which is ever-so-slightly more efficient. Make it so.
Attachments
patch (2.39 KB, patch)
2017-12-04 23:20 PST, JF Bastien
no flags
JF Bastien
Comment 1 2017-12-04 23:20:33 PST
Created attachment 328442 [details] patch Mark rubber-stamped this in-person earlier today.
WebKit Commit Bot
Comment 2 2017-12-04 23:51:36 PST
Comment on attachment 328442 [details] patch Clearing flags on attachment: 328442 Committed r225519: <https://trac.webkit.org/changeset/225519>
WebKit Commit Bot
Comment 3 2017-12-04 23:51:38 PST
All reviewed patches have been landed. Closing bug.
Radar WebKit Bug Importer
Comment 4 2017-12-04 23:52:19 PST
Note You need to log in before you can comment on or make changes to this bug.