Math: don't redundantly check for exceptions, just release scope https://bugs.webkit.org/show_bug.cgi?id=180395

Rubber stamped by Mark Lam.

Two of the exceptions checks could just have been exception scope
releases before the return, which is ever-so-slightly more
efficient. The same technically applies where we have loops over
parameters, but doing the scope release there isn't really more
efficient and is way harder to read.

* runtime/MathObject.cpp:
(JSC::mathProtoFuncATan2):
(JSC::mathProtoFuncPow):


Canonical link: https://commits.webkit.org/196355@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@225519 268f45cc-cd09-0410-ab3c-d52691b4dbfc